--- a/themes/finna/less/bootstrap/finna/tabs.less
+++ b/themes/finna/less/bootstrap/finna/tabs.less
@@ -48,8 +48,8 @@
             }
             &:not(.active) > a {
                 transition: background-color 0.1s linear;
-                &:hover, &:active {
-                    background: darken(@link-color,4%);   
+                &:hover, &:active, &:focus {
+                    background: darken(@link-color,4%);
                 }
             }
         }
